Add UTs, minor improvements

--- a/frontend/src/app/login/login.component.html
+++ b/frontend/src/app/login/login.component.html
@@ -6,9 +6,9 @@
       </div>
       
       <input 
-        id="email" 
-        [(ngModel)]="email" 
-        name="email" 
+        id="login" 
+        [(ngModel)]="login" 
+        name="login" 
         placeholder="Login" 
         required 
       />
