--- a/frontend/src/app/daily-task/daily-task.component.html
+++ b/frontend/src/app/daily-task/daily-task.component.html
@@ -4,6 +4,14 @@
     <p *ngIf="dailyTasks.length === 0" class="no-objects-message">No daily tasks.</p>
 
     <table class="tasks-table" *ngIf="dailyTasks.length > 0">
+      <thead>
+        <tr>
+          <th></th>
+          <th>Description</th>
+          <th>Assignee</th>
+          <th></th>
+        </tr>
+      </thead>
       <tbody>
         <tr *ngFor="let dailyTask of dailyTasks; let i = index">
           <td>
@@ -11,7 +19,8 @@
               <span [ngClass]="dailyTask.done ? 'icon-task-done' : 'icon-task-not-done'"></span>
             </button>
           </td>
-          <td>{{ dailyTask.description }} ({{ dailyTask.createdBy }})</td>
+          <td>{{ dailyTask.description }}</td>
+          <td>{{ dailyTask.assignee || '-' }}</td>
           <td>
             <button class="delete-button" (click)="removeDailyTask(dailyTask.id)">
               <span class="icon-trash"></span>
@@ -29,6 +38,17 @@
         placeholder="Add new daily task"
         required
       />
+      <select
+        id="assignee"
+        [(ngModel)]="dailyTaskRequest.assigneeUserId"
+        name="assignee"
+        class="assignee-select"
+      >
+        <option [value]="undefined">Select assignee</option>
+        <option *ngFor="let user of users" [value]="user.id">
+          {{ user.username }}
+        </option>
+      </select>
       <div class="form-buttons">
         <button
           class="green-button"
